--- a/apps/todos-e2e/project.json
+++ b/apps/todos-e2e/project.json
@@ -1,5 +1,5 @@
 {
-  "root": "apps/todos-e2e",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/todos-e2e/src",
   "projectType": "application",
   "targets": {
